Task7/gatekeeper/constraint-templates/privileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spspprivileged
  annotations:
    description: "Запрещает создание privileged контейнеров"
spec:
  crd:
    spec:
      names:
        kind: K8sPSPPrivileged
      validation:
        # Schema validation для параметров constraint
        openAPIV3Schema:
          type: object
          properties:
            exemptImages:
              description: "Список образов, которые освобождены от проверки"
              type: array
              items:
                type: string
  
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspprivileged
        
        # Violation возвращается если контейнер privileged
        violation[{"msg": msg, "details": {}}] {
          # Проверяем все контейнеры в pod spec
          container := input_containers[_]
          container.securityContext.privileged
          
          # Формируем сообщение об ошибке
          msg := sprintf("Privileged container not allowed: %v", [container.name])
        }
        
        # Также проверяем init containers
        violation[{"msg": msg, "details": {}}] {
          container := input_init_containers[_]
          container.securityContext.privileged
          msg := sprintf("Privileged init container not allowed: %v", [container.name])
        }
        
        # Вспомогательные функции для получения контейнеров
        input_containers[c] {
          c := input.review.object.spec.containers[_]
        }
        
        input_containers[c] {
          c := input.review.object.spec.template.spec.containers[_]
        }
        
        input_init_containers[c] {
          c := input.review.object.spec.initContainers[_]
        }
        
        input_init_containers[c] {
          c := input.review.object.spec.template.spec.initContainers[_]
        }
